--- a/Languages/English/Keyed/Keys.xml
+++ b/Languages/English/Keyed/Keys.xml
@@ -2,4 +2,5 @@
 <LanguageData>
   <PP_ResearchCostMultipliersByTechLevel>Research cost multipliers by tech level</PP_ResearchCostMultipliersByTechLevel>
   <PP_RoundingMultiple>Round research project values to multiples of:</PP_RoundingMultiple>
+  <PP_ExcludeGravdata>Exclude gravdata</PP_ExcludeGravdata>
 </LanguageData>
